teste de imagem

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background: url(/assets/WhatsApp\ Image\ 2022-10-14\ at\ 13.35.59.jpeg) center/cover no-repeat fixed;   
+    background: url(/imagens/WhatsApp\ Image\ 2022-10-14\ at\ 13.35.59.jpeg) center/cover no-repeat fixed;   
     text-align: center;
     min-height: 100vh;
     
