--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ main {
     color: #aaa;
     top: 54.5%;
     right: 27%;
-    font-size: clamp(8px, 5vw, 25px);
+    font-size: min(4vw, 15px); /* Ajusta dinamicamente */
 }
 
 .pokemon_name {
